[package]
name = "cc-monitor-prom"
version = "0.1.0"
authors = ["timo <timo@timoschuetz.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.1", features = ["blocking", "json"]}
serde_derive = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
prometheus_exporter = "0.8.0"
env_logger = "0.8"
log = { version = "0.4" }
rand = "0.8"
confy = "0.4.0"
